--- a/SLAM_LIDAR_cantos_atualizado.ipynb
+++ b/SLAM_LIDAR_cantos_atualizado.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mariapinho8/SLAM_LIDAR_Project/blob/main/SLAM_LIDAR_cantos_atualizado.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "zDwIJQ4tE9X_"
       },
       "source": [
@@ -129,7 +139,7 @@
         "outputId": "0b36eb23-8a07-46c2-e290-9bcf4f0fdeca"
       },
       "id": "3eAKsPw4F56_",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +169,7 @@
       "metadata": {
         "id": "f_6lra1AE9YA"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "import numpy as np\n",
@@ -201,7 +211,7 @@
         "id": "XHSBkMLbE9YA",
         "outputId": "f386b5c4-ae08-47b8-be27-7a430566eed2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +289,7 @@
         "id": "iUmAM2PZE9YA",
         "outputId": "41f692bf-ea09-4c02-ff85-b06c61d2928d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +349,7 @@
         "id": "n3UpxHAZE9YA",
         "outputId": "b9205993-cbb8-4c81-a3de-5af8174fac1c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +407,7 @@
         "id": "ZgiiT1FUE9YB",
         "outputId": "92747244-43f7-4058-96cf-5abdf6fd9ca2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -483,7 +493,7 @@
         "id": "cyhxlDCCE9YB",
         "outputId": "50f15283-d1c3-4b79-920f-e4a6886c2fff"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -573,7 +583,7 @@
         "id": "Ukm-XTEzE9YB",
         "outputId": "575d4d20-c4ce-4d0c-8074-01755db1cc1a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,7 +737,7 @@
         "id": "DeOraixHE9YB",
         "outputId": "d656361e-1fa8-440a-93f5-14f2ed489bf3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +815,7 @@
         "id": "kltZFoatE9YB",
         "outputId": "3f0b5f6a-5504-4520-9d58-f024c148ffdf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,7 +875,7 @@
         "id": "7dhKIYVlE9YB",
         "outputId": "6311a258-3ad1-4b8c-cf92-2b7e3c11014e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1014,7 +1024,7 @@
       "metadata": {
         "id": "qosan1fNE9YB"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "# Hiperparâmetros do EKF (podem ser ajustados)\n",
@@ -1056,7 +1066,7 @@
       "metadata": {
         "id": "6_XuukqCE9YB"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def ekf_predict(x, P, delta_s_k, delta_theta_k):\n",
@@ -1156,7 +1166,7 @@
       "metadata": {
         "id": "TTgBhDXpE9YC"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def measurement_model_for_landmark(x, j):\n",
@@ -1216,7 +1226,7 @@
       "metadata": {
         "id": "JXG9hScME9YC"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def ekf_update_for_measurement(x, P, z_obs, landmark_index):\n",
@@ -1242,7 +1252,7 @@
       "metadata": {
         "id": "sqXfX7weE9YC"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def ekf_add_new_landmark(x, P, z_obs):\n",
@@ -1308,7 +1318,7 @@
         "id": "TYkHFXlKE9YC",
         "outputId": "cb98866b-69eb-4d3c-dd9b-ef91b079e2d3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1455,7 +1465,7 @@
         "id": "OnCcbwlvE9YC",
         "outputId": "e5c54085-91e8-466f-c4a1-72ba80428672"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1575,7 +1585,7 @@
         "id": "jUlceg4uE9YC",
         "outputId": "ef3dd613-e3b3-4387-8fb9-f8ecc8049126"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1665,7 +1675,8 @@
   "metadata": {
     "colab": {
       "name": "SLAM_LIDAR_cantos.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
